@@ -187,7 +187,7 @@
        </row>
        <row>
         <entry><literal>xml</literal></entry>
-        <entry>The issue(s) in canonical XML format.</entry>
+        <entry>The issue(s) in canonical &xml; format.</entry>
        </row>
       </tbody>
      </tgroup>
@@ -343,10 +343,10 @@
    issue. This form will be generated by &dtml; using the special
    dtml-in tag that iterates over all the elements in a list (in this
    case, the fields of the issue). For more information about &dtml;
-   and the <sgmltag>dtml-in</sgmltag> tag, see <ulink
-   url="http://www.zope.org/Documentation/Guides/&dtml;">&dtml;
-   manual</ulink>. The &dtml; code to display the forms will be
-   similar to the following:
+   and the <sgmltag>dtml-in</sgmltag> tag, see the <ulink
+   url="http://www.zope.org/Documentation/Guides/DTML">&dtml;
+   Reference</ulink> manual. The &dtml; code to display the forms will
+   be similar to the following:
    <programlisting>
 <![CDATA[
   <table>
