@@ -103,15 +103,16 @@
 <?xml version="1.0"?>
 <!DOCTYPE issue PUBLIC "-//Software Carpentry//DTD QMTrack V0.1//EN">
 <issue>
-  <class>default</class>
-  <iid>compiler.alex17</iid>
+  <class>bug</class>
+  <iid>17</iid>
   <field-data>
     <field name="categories">
-      <item>back end</item>
+      <item>front end</item>
       <item>C++</item>
     </field>
     <field name="severity">severe</field>
     <field name="priority">4</field>
+    <field name="description">"Internal Compiler Error" in parser.</field>
     <field name="input">
 <![CDATA[
 int foo (char* p) {
@@ -120,7 +121,6 @@ int foo (char* p) {
 ]]>]]&gt;<![CDATA[
     </field>
     <field name="flags">-g -O2</field>
-    <field name="description">Compiler ICE in scheduler.</field>
     <field name="attachments">
       <item>
         <attachment>
@@ -133,9 +133,34 @@ int foo (char* p) {
   </field-data>
 </issue>
      ]]></programlisting>
-    This example includes one attachment, which is stored outside of
-    the &xml; representation in a file (or other entity) named
-    "<filename>attachment001</filename>".</para>
+    </para>
+
+    <para>This example is an issue in the issue class "bug", which is
+    used for bug reports (as opposed to, for instance, feature
+    requests or reports of documentation errors).  The issue id is
+    "17", and the issue is included in two categories: "back end" and
+    "C++".</para>
+
+    <para>In addition to the standard "severity", "priority", and
+    "description" fields, the "bug" issue class includes two other
+    fields specifically added for recording information about compiler
+    bugs.  The "flags" field describes the command-line options that
+    should be specified when inoking the compiler to reproduce the
+    problem.  The "input" field contains the input source code.  Since
+    the "input" field contains program text that is likely to contain
+    special characters, the field contents are placed in a
+    <sgmltag>CDATA</sgmltag> element.</para>
+
+    <para>The "attachment" field in the "bug" issue class contains a
+    set of zero or more file attachments.  For this bug, one
+    attachment is included: a core file generated by the crashing
+    compiler.  The MIME type is "application/octet-stream", since core
+    files are usually treated as binary data.  The data itself is
+    stored in an object named "attachment001".  The location of this
+    object is context-dependent; if the &xml; issue record is in the
+    &idb;, it is stored in a file by that name, while if the issue
+    record is included in an e-mail message, it will be included as an
+    attachment with that name.</para>
 
    </section>
    
