@@ -1,0 +1,52 @@
+<!--
+
+  File:   qm.mod
+  Author: Alex Samuel
+  Date:   2000-12-04
+
+  Contents:
+    QM-specific DTD module for use with DocBook.  Contains names,
+    phrases, acronyms, etc. used throughout QM documentation.
+
+  Copyright (C) 2000 CodeSourcery LLC.  This material may
+  be distributed only subject to the terms and conditions set forth in
+  the Software Carpentry Open Publication License, which is available at:
+
+    http://www.software-carpentry.com/openpub-license.html
+
+-->
+
+<!-- Names of the project components.  -->
+
+<!ENTITY sc "&#60;ulink url=&#34;http://www.software-carpentry.com&#34;&#62;Software Carpentry&#60;/ulink&#62;">
+
+<!ENTITY qmbuild "QMBuild">
+<!ENTITY qmconfig "QMConfig">
+<!ENTITY qmtest "QMTest">
+<!ENTITY qmtrack "QMTrack">
+
+<!-- Acronyms.  -->
+
+<!ENTITY api "<acronym>API</acronym>">
+<!ENTITY dtd "<acronym>DTD</acronym>">
+<!ENTITY dtml "<acronym>DTML</acronym>">
+<!ENTITY idb "<acronym>IDB</acronym>">
+<!ENTITY iid "<acronym>IID</acronym>">
+<!ENTITY rdbms "<acronym>RDBMS</acronym>">
+<!ENTITY sql "<acronym>SQL</acronym>">
+<!ENTITY xml "<acronym>XML</acronym>">
+
+<!-- Other commonly-used symbols and phrases.  -->
+
+<!ENTITY prompt "<prompt>$ </prompt>">
+
+<!--
+  Local Variables:
+  mode: sgml
+  indent-tabs-mode: nil
+  sgml-indent-step: 1
+  sgml-always-quote-attributes: t
+  sgml-general-insert-case: lower
+  sgml-minimize-attributes: nil
+  End:
+-->
